# par-cli-tts

./: .env.example  .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  ideas.md  pyproject.toml  pyrightconfig.json  reddit_release.md  ruff.toml
.claude/output-styles/: tts-summary.md
.github/workflows/: build.yml  publish-dev.yml  publish.yml  release.yml  reusable-setup.yml
docs/: ARCHITECTURE.md  CLAUDE.md  DOCUMENTATION_STYLE_GUIDE.md
docs/superpowers/plans/: 2026-04-26-distribution-ecosystem.md
docs/superpowers/specs/: 2026-04-26-distribution-ecosystem-design.md
par_cli_tts/: __init__.py  audio.py  config_file.py  defaults.py  errors.py  http_client.py  install_claude_style.py  kokoro_cli.py  model_downloader.py  tts_cli.py  utils.py  voice_cache.py
par_cli_tts/providers/: __init__.py  base.py  deepgram.py  elevenlabs.py  gemini.py  kokoro_onnx.py  openai.py
par_tts/: __init__.py  audio.py  audio_processing.py  costs.py  defaults.py  diagnostics.py  errors.py  http_client.py  logging_config.py  model_downloader.py  pipeline.py  provider_factory.py  retry.py  text_processing.py  utils.py  voice_cache.py  voice_packs.py  voice_search.py  workflow.py
par_tts/cli/: __init__.py  completions.py  config_file.py  console.py  install_claude_style.py  kokoro_cli.py  tts_cli.py
par_tts/data/: voice_packs.yaml
par_tts/providers/: __init__.py  base.py  deepgram.py  elevenlabs.py  gemini.py  kokoro_onnx.py  openai.py  registry.py
src/: __init__.py  config_file.py  defaults.py  errors.py  install_claude_style.py  kokoro_cli.py  model_downloader.py  tts_cli.py  utils.py  voice_cache.py
src/providers/: elevenlabs.py  kokoro_onnx.py  openai.py
tests/: __init__.py  conftest.py  test_api_surface.py  test_audio.py  test_audio_processing.py  test_cli_quick_wins.py  test_cli_workflow_automation.py  test_config.py  test_library_api_enhancements.py  test_logging_decouple.py  test_provider_plugins.py  test_public_api_expansion.py  test_reliability_observability.py  test_text_processing.py  test_utils.py  test_voice_cache.py  test_voice_packs.py  test_workflow_automation.py
tests/test_providers/: test_provider_options.py
