[project]
name = "par-cli-tts"
dynamic = [
    "version",
]
description = "PAR TTS — Text-to-speech library and CLI supporting ElevenLabs, OpenAI, Kokoro ONNX, Deepgram, and Gemini"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
maintainers = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Typing :: Typed",
]
keywords = [
    "tts",
    "text-to-speech",
    "elevenlabs",
    "openai",
    "kokoro",
    "deepgram",
    "gemini",
    "cli",
    "audio",
    "library",
]
dependencies = [
    "httpx>=0.28.1",
    "elevenlabs>=2.44.0",
    "python-dotenv>=1.2.2",
    "typer>=0.24.2",
    "rich>=15.0.0",
    "platformdirs>=4.9.6",
    "pyyaml>=6.0.3",
    "openai>=2.32.0",
    "kokoro-onnx>=0.5.0",
    "soundfile>=0.13.1",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/paulrobello/par-cli-tts"
Documentation = "https://github.com/paulrobello/par-cli-tts/blob/main/README.md"
Repository = "https://github.com/paulrobello/par-cli-tts"
Issues = "https://github.com/paulrobello/par-cli-tts/issues"
Discussions = "https://github.com/paulrobello/par-cli-tts/discussions"
Wiki = "https://github.com/paulrobello/par-cli-tts/wiki"

[project.scripts]
par-tts = "par_tts.cli.tts_cli:_run_cli"
par-tts-kokoro = "par_tts.cli.kokoro_cli:app"
par-tts-install-style = "par_tts.cli.install_claude_style:app"

[build-system]
requires = [
    "hatchling",
    "wheel",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.4.4",
    "pyright>=1.1.409",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "hatchling>=1.29.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "-v --cov=par_tts --cov-report=term-missing"

[tool.hatch.version]
path = "par_tts/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "par_tts",
    "par_cli_tts",
]
include = [
    "py.typed",
    "**/*.py",
    ".claude/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "par_tts",
    "par_cli_tts",
    ".claude",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__",
    "*.so",
    "*.dylib",
]
